Extend LoopNodeTest